--- a/Public/Theme/2016/css.css
+++ b/Public/Theme/2016/css.css
@@ -1,6 +1,6 @@
 html,body,.main{width:100%}
 html,body{margin:0;padding:0;}
-.main{max-width:640px;margin:0 auto;}
+.main{max-width:640px;margin:0 auto;position:relative;}
 .center{text-align:center;}
 .musicbox{padding:3%;}
 .button{overflow:hidden;}
@@ -14,54 +14,18 @@ html,body{margin:0;padding:0;}
 .playing{color:#217be6;}
 a.file{color:#217be6;display:block;float:right;width:20%;text-align:center;}
 .hidden{display:none !important;}
-@-webkit-keyframes rotate {
-    0%,
-    100% {
-        -webkit-transform: rotate(0deg);
-    }
-    100% {
-        -webkit-transform: rotate(360deg);
-    }
-}
-@-moz-keyframes rotate {
-    0%,
-    100% {
-        -moz-transform: rotate(0deg);
-    }
-    100% {
-        -moz-transform: rotate(360deg);
-    }
-}
-@-o-keyframes rotate {
-    0%,
-    100% {
-        -o-transform: rotate(0deg);
-    }
-    100% {
-        -o-transform: rotate(360deg);
-    }
-}
-@-ms-keyframes rotate {
-    0%,
-    100% {
-        -ms-transform: rotate(0deg);
-    }
-    100% {
-        -ms-transform: rotate(360deg);
-    }
-}
-@keyframes rotate {
-    0%,
-    100% {
-        transform: rotate(0deg);
-    }
-    100% {
-        transform: rotate(360deg);
-    }
-}
-.cd{background:url('cd.png') no-repeat left top;background-size:100% auto;width:40px;height:40px;
-         animation:rotate 4s linear infinite;
-         -moz-animation: rotate 4s linear infinite;
-         -webkit-animation: rotate 4s linear infinite;
-         -o-animation: rotate 4s linear infinite;
-         -ms-animation: rotate 4s linear infinite;position:fixed;right:10px;top:10px;}
+@-webkit-keyframes rotate{0%,100%{-webkit-transform:rotate(0deg)}100%{-webkit-transform:rotate(360deg)}}
+@-moz-keyframes rotate{0%,100%{-moz-transform:rotate(0deg)}100%{-moz-transform:rotate(360deg)}}
+@-o-keyframes rotate{0%,100%{-o-transform:rotate(0deg)}100%{-o-transform:rotate(360deg)}}
+@-ms-keyframes rotate{0%,100%{-ms-transform:rotate(0deg)}100%{-ms-transform:rotate(360deg)}}
+@keyframes rotate{0%,100%{transform:rotate(0deg)}100%{transform:rotate(360deg)}}
+.cd{position:absolute;left:8%;top:28px;background:url('cd.png') no-repeat left top;background-size:100% auto;width:40px;height:40px;animation:rotate 4s linear infinite;-moz-animation:rotate 4s linear infinite;-webkit-animation:rotate 4s linear infinite;-o-animation:rotate 4s linear infinite;-ms-animation:rotate 4s linear infinite;}
+.range{display:-webkit-box;display:-webkit-flex;display:-moz-box;display:-moz-flex;display:-ms-flexbox;display:flex;-webkit-box-align:center;-ms-flex-align:center;-webkit-align-items:center;-moz-align-items:center;align-items:center;padding:2px 11px}
+.range .icon{-webkit-box-flex:0;-webkit-flex:0;-moz-box-flex:0;-moz-flex:0;-ms-flex:0;flex:0;display:block;min-width:24px;height:24px;text-align:center;font-size:24px;background:url('yl.png') no-repeat right top;background-size:auto 100%}
+.range input{-webkit-box-flex:1;-webkit-flex:1;-moz-box-flex:1;-moz-flex:1;-ms-flex:1;flex:1;display:block;margin-right:10px;margin-left:10px;overflow:hidden;margin-top:5px;margin-bottom:5px;padding-right:2px;padding-left:1px;width:auto;height:24px;outline:0;background:linear-gradient(to right,#006 0,#0f0 70%,#f00 100%);background-position:center;background-size:99% 4px;background-repeat:no-repeat;-webkit-appearance:none}
+.range input::-moz-focus-outer{border:0}
+.range input::-webkit-slider-thumb{position:relative;width:4px;height:20px;border-radius:50%;background-color:#ccc;box-shadow:0 0 2px rgba(0,0,0,0.3),0 3px 5px rgba(0,0,0,0.2);cursor:pointer;-webkit-appearance:none;border:0}
+.range input::-webkit-slider-thumb:before{position:absolute;top:13px;left:-2001px;width:2000px;height:4px;content:' '}
+.range input::-webkit-slider-thumb:after{position:absolute;top:-15px;left:-15px;padding:30px;height:4px;content:' '}
+.range input::-ms-fill-lower{height:4px;}
+.range input::-webkit-slider-thumb:before,.range input::-ms-fill-lower{background:#ccc}
